Debug commands removed.